--- a/driverrehab/src/App.css
+++ b/driverrehab/src/App.css
@@ -37,3 +37,52 @@ div {
 p {
   background-color: yellow;
 }
+
+.block {
+  background: url("/Van1.PNG") no-repeat scroll 0 0 transparent;
+    background-image: url(
+    'https://media.geeksforgeeks.org/wp-content/uploads/20190314004249/sample-image2.png');
+    background-size: cover;
+    width: 300px;
+    height: 200px;
+    font-size: 2rem;
+  display: block;
+ left: 0px;
+  width: 50%;
+
+
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+    position: absolute;
+ height: 100%;
+  text-align: center;
+}
+
+
+.bloc1k {
+
+  display: block;
+ right: 0px;
+  width: 50%;
+  border: none;
+
+  background-color: green;
+
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+    position: absolute;
+ height: 100%;
+  text-align: center;
+}
+
+
+
+.btn12 {
+height: 37px;
+width: 37px;
+
+background-image:url('http://www.w3.org/html/logo/downloads/HTML5_Logo_32.png');
+background-repeat:no-repeat;
+}
