--- a/src/App.css
+++ b/src/App.css
@@ -27,17 +27,13 @@
 
 
 h1 {
-    background-color: yellow;
 
 }
 
-div {
-    background-color: lightgreen;
-}
+
 
 p {
-    background-color: yellow;
-}
+ }
 
 .block {
 
@@ -48,7 +44,7 @@ p {
     left: 0px;
     width: 50%;
 
-    background-color: yellow;
+    background-color: white;
 
     padding: 14px 28px;
     font-size: 50px;
@@ -65,11 +61,10 @@ p {
 .block:hover:after{
     content:"Intake Form ";
 }
-.block:hover {background-color: lightyellow}
+.block:hover {background-color: darkgrey}
 
 .block:active {
-    background-color: #3e8e41;
-    box-shadow: 0 5px #666;
+     box-shadow: 0 5px #666;
     transform: translateY(4px);
 }
 
@@ -80,7 +75,7 @@ p {
     width: 50%;
     border: none;
 
-    background-color: green;
+    background-color: lightgrey;
     vertical-align: top;
     padding: 14px 28px;
     font-size: 50px;
@@ -93,11 +88,10 @@ p {
 .bloc1k:hover:after{
     content: "Evaluation Form ";
 }
-.bloc1k:hover {background-color: #3e8e41}
+.bloc1k:hover {background-color: darkgrey}
 
 .bloc1k:active {
-    background-color: #3e8e41;
-    box-shadow: 0 5px #666;
+     box-shadow: 0 5px #666;
     transform: translateY(4px);
 }
 
